--- a/dgm/index.html
+++ b/dgm/index.html
@@ -15,8 +15,9 @@
 <body>
 
 	<header class="transparent">
-			<a class="logo" href="index.html"><img src="assets/img/dgm-svg-full.svg" alt="logo dongormash">
-			</a>
+		<div class="logo">
+			<a  href="index.html"><img src="assets/img/dgm-svg-full.svg" alt="logo dongormash">
+			</a></div>
 		<div class="container">
 			<div id="MenuIcon">
 				<div id="MenuText">Меню</div>
@@ -134,7 +135,7 @@
 				</a>
 				<a href="#">
 					<div class="description_side">
-						 <span class="card_body">ДРУГОЙ ПЕРЕЧЕНЬ<br>оборудование шахтного подъема<br> (скипы, копровые шкивы, подвесные устройства, клети, парашюты и др.)<br> подъемные машины<br>лебедки</span>
+						 <p class="card_body">ДРУГОЙ ПЕРЕЧЕНЬ<br>оборудование шахтного подъема<br> (скипы, копровые шкивы, подвесные устройства, клети, парашюты и др.)<br> подъемные машины<br>лебедки</p>
 					</div>
 				</a>
 			</div>
@@ -157,7 +158,7 @@
 				</a>
 			<a href="#">
 				<div class="description_side">
-						<span class="card_body">Ленточные конвейеры<br> (горизонтальные и наклонные)<br> Машина погрузочно-транспортная шахтная (ПД-8В) <br> вагонетки</span>
+						<p class="card_body">Ленточные конвейеры<br> (горизонтальные и наклонные)<br> Машина погрузочно-транспортная шахтная (ПД-8В) <br> вагонетки</p>
 				</div>
 			</a>
 		</div>
@@ -174,7 +175,7 @@
 			</a>
 			<a href="#">
 				<div class="description_side">
-					 <span class="card_body">Вентиляторные установки<br>оборудование шахтного подъема<br> (скипы, копровые шкивы, подвесные устройства, клети, парашюты и др.)<br> подъемные машины<br>лебедки</span>
+					 <p class="card_body">Вентиляторные установки<br>оборудование шахтного подъема<br> (скипы, копровые шкивы, подвесные устройства, клети, парашюты и др.)<br> подъемные машины<br>лебедки</p>
 				</div>
 			</a>
 		</div>
