--- a/dgm/personnel/index.html
+++ b/dgm/personnel/index.html
@@ -75,6 +75,54 @@
 								<p class="personnel_content_small">Нередки случаи, когда талантливый сотрудник, пришедший рядовым специалистом, достигает руководящей позиции всего за несколько лет.</p>
 						</div>
 				</div>
+				<div class="personnel-items_wrapper">
+					<div class="personnel-items">
+						<div class="personnel-items_wrapper-img">
+							<img src="../assets/img/jobs_01.svg" alt="">
+						</div>
+						<div class="personnel-items_title">
+							<p>Прохождение практики для студентов вузов</p>
+						</div>
+						<div class="personnel-items_content">
+							<p>ГП «Донецкгормаш» предоставляет студентам отличную возможность узнать больше о практической составляющей выбранной профессии и познакомиться с высококлассными сотрудниками, которые с удовольствием поделятся опытом и помогут освоить современные рабочие и инженерные специальности.</p>
+						</div>
+					</div>
+					<div class="personnel-items">
+						<div class="personnel-items_wrapper-img">
+							<img src="../assets/img/jobs_02.svg" alt="">
+						</div>
+						<div class="personnel-items_title">
+							<p>Стажировка для молодых специалистов</p>
+						</div>
+						<div class="personnel-items_content">
+							<p>Стажировка на ГП «Донецкгормаш» позволит выпускникам вузов и училищь приобрести ценный практический опыт в условиях современного производства, разобраться в тонкостях профессии и раскрыть свой потенциал.</p>
+						</div>
+					</div>
+
+					<div class="personnel-items">
+						<div class="personnel-items_wrapper-img">
+							<img src="../assets/img/jobs_03.svg" alt="">
+						</div>
+						<div class="personnel-items_title">
+							<p>Пул вакансий по направлениям</p>
+						</div>
+						<div class="personnel-items_content">
+							<p>Полный перечень вакансий, открытых на предприятии.</p>
+						</div>
+					</div>
+
+					<div class="personnel-items">
+						<div class="personnel-items_wrapper-img">
+							<img src="../assets/img/jobs_04.svg" alt="">
+						</div>
+						<div class="personnel-items_title">
+							<p>Индивидуальные условия для профессионалов</p>
+						</div>
+						<div class="personnel-items_content">
+							<p>Мы предлагаем особые условия для специалистов, которые обладают высокой квалификацией, большим опытом работы и хотят применить свои навыки на нашем заводе.</p>
+						</div>
+					</div>
+				</div>
 		</section>
 	</section>
 </section>
