--- a/dgm/personnel/vacancy.html
+++ b/dgm/personnel/vacancy.html
@@ -62,42 +62,45 @@
 				</div>
 				<div class="vacancy_content">
 					<p>ГП «Донецкгормаш» – машиностроительное предприятие с широкой номенклатурой изготовления и полным циклом создания машин и механизмов, от проектирования до монтажа.</p>
-					<p>На постоянную работу требуются:</p>
-					<table class="border_1px padding-cells5">
-						 <tbody>
-							  <tr>
-								 <td style="vertical-align:middle;" align="center" bgcolor="e5e5e5">Профессия (должность)</td>
-								 <td style="vertical-align:middle;" align="center" bgcolor="e5e5e5"> Количество вакансий</td>
-								 <td style="vertical-align:middle;" align="center"  bgcolor="e5e5e5">Образование </td>
-								</tr>
-								<tr>
-									<td align="center" class="align-left">Слесарь механосборочных работ</td>
-									<td style="vertical-align: middle; color: rgb(255, 255, 255);" bgcolor="0d529d" class="align-center">10 </td>
-									<td align="center">средне-специальное</td>
-								</tr>
-								<tr>
-									<td align="center" class="align-left">Слесарь по сборке металлоконструкций</td>
-									<td style="vertical-align: middle; color: rgb(255, 255, 255);" bgcolor="0d529d" class="align-center">10</td>
-									<td class="align-center">средне-специальное</td>
-								</tr>
-								<tr>
-									<td align="center" class="align-left">Электрогазосварщик</td>
-									<td style="vertical-align: middle; color: rgb(255, 255, 255);" bgcolor="0d529d" class="align-center">7</td>
-									<td class="align-center">средне-специальное</td>
-								</tr>
-								<tr>
-									<td align="center" class="align-left">Газорезчик</td>
-									<td style="vertical-align: middle; color: rgb(255, 255, 255);" bgcolor="0d529d" class="align-center">5</td>
-									<td class="align-center">среднее</td>
-								</tr>
-								<tr>
-									 <td align="center" class="align-left">Слесарь-ремонтник</td>
-									 <td style="vertical-align: middle; color: rgb(255, 255, 255);" bgcolor="0d529d" class="align-center">8</td>
-									 <td class="align-center">среднее</td>
-								</tr>
-							</tbody>
-				 </table>
+					<p class="vacancy_content-tittle">На постоянную работу требуются:</p>
+				</div>
+				<div class="career-jobs_section">
+					<div class="career-jobs_section-wrapper">
+						<div class="career-jobs_content">
+							<img src="../assets/img/vacansion_1.svg" alt="">
+							<div class="career-jobs_section-header">Рабочие специальности</div>
+							<div class="career-jobs_section-list">
+								<ul>
+									<li>Токарь-расточник</li>
+									<li>Фрезеровщик</li>
+									<li>Маляр</li>
+									<li>Слесарь механосборочных работ</li>
+									<li>Электрогазосварщик</li>
+									<li>Слесарь по сборке металлоконструкций</li>
+									<li>Слесарь-ремонтник</li>
+									<li>Газорезчик</li>
+									<li>Маляр</li>
 
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="career-jobs_section-wrapper">
+						<div class="career-jobs_content">
+							<img src="../assets/img/vacansion_2.svg" alt="">
+							<div class="career-jobs_section-header">Специалисты и руководители</div>
+							<div class="career-jobs_section-list">
+								<ul>
+									<li>Инженер-технолог</li>
+									<li>Специалист по табельному учету (делопроизводитель)</li>
+									<li>Инженер по нормированию труда</li>
+									<li>Главный конструктор</li>
+									<li>Начальник лаборатории контроля технологической оснастки</li>
+								</ul>
+							</div>
+						</div>
+
+					</div>
 				</div>
 		</section>
 	</section>
@@ -117,7 +120,8 @@
 				<span>Наверх</span>
 			</div>
 		<div class="footer_wrapper">
-		<div class="footer_head">
+		<div class="footer_wrapper_head">
+			<div class="footer_head">
 				<div class="contact-location adress">
 					<h3 class="contact-location_heading"> Наш адрес</h3>
 					<p>83005<br> г.Донецк<br> ул.Ивана Ткаченко, 189</p>
@@ -157,7 +161,7 @@
 				</div>
 
 		</div>
-
+		</div>
 		<div class="policyty">
 			<p>&copy; ГП &laquo;Донецкгормаш&raquo;, 2018</p>
 		</div>
