--- a/dgm/shipper.html
+++ b/dgm/shipper.html
@@ -45,43 +45,45 @@
 			<section class="sidebar_content history_old">
 				<section class="sidebar_content_inner">
 						<div class="shipper_content">
-								<div class="part-left">
-								<p class="intro">Для ГП &laquo;Донецкгормаш&raquo; качество — это приоритет. Именно поэтому мы даем возможность всем производителям стать нашими партнерами по открытой и прозрачной системе.</p>
-								<!-- <span class="personnel_content_line"></span> -->
-								<p>
-										Основные принципы, которыми руководствуется предприятие при осуществлении закупок:
-								</p>
-								<ul>
-									<li>прозрачность и информационная открытость,</li>
-									<li>отсутствие дискриминации и необоснованных ограничений конкуренции</li>
-									<li>целевое и эффективное расходование средств предприятия</li>
-									<li>выстраивание долгосрочных партнерских отношений с поставщиками.</li>
-								</ul>
-								<p>
-										Основные принципы, которыми руководствуется предприятие при выборе поставщиков товаров и услуг:
-								</p>
-								<ul>
-									<li>деловая репутация контрагента</li>
-									<li>высокое качество предлагаемых материалов или предоставляемых услуг</li>
-									<li>своевременность поставок</li>
-									<li>оптимальный уровень цен и приемлемые условия оплаты</li>
-									<li>ГП &laquo;Донецкгормаш&raquo; всегда открыто для сотрудничества с поставщиками, которые соответствуют перечисленным критериям.</li>
-								</ul>
-							  </div>
+							<div class="shipper_content-wrapper">
+										<div class="part-left">
+												<p class="intro">Для ГП &laquo;Донецкгормаш&raquo; качество — это приоритет. Именно поэтому мы даем возможность всем производителям стать нашими партнерами по открытой и прозрачной системе.</p>
+												<!-- <span class="personnel_content_line"></span> -->
+												<p>
+														Основные принципы, которыми руководствуется предприятие при осуществлении закупок:
+												</p>
+												<ul>
+													<li>прозрачность и информационная открытость,</li>
+													<li>отсутствие дискриминации и необоснованных ограничений конкуренции</li>
+													<li>целевое и эффективное расходование средств предприятия</li>
+													<li>выстраивание долгосрочных партнерских отношений с поставщиками.</li>
+												</ul>
+												<p>
+														Основные принципы, которыми руководствуется предприятие при выборе поставщиков товаров и услуг:
+												</p>
+												<ul>
+													<li>деловая репутация контрагента</li>
+													<li>высокое качество предлагаемых материалов или предоставляемых услуг</li>
+													<li>своевременность поставок</li>
+													<li>оптимальный уровень цен и приемлемые условия оплаты</li>
+													<li>ГП &laquo;Донецкгормаш&raquo; всегда открыто для сотрудничества с поставщиками, которые соответствуют перечисленным критериям.</li>
+												</ul>
+												<div class="contact-shipper">
+													<p>По вопросам сотрудничества:</p>
+													<div class="contact-tel-wrapper">
+														<a href="tel:+380710000000" class='tel'>
+														+380710000000</a>
+														<span class="whom">Отдел закупок</span>
+													</div>
+													<a href="mailto:snabg@dngormash.ru" class="email">snabg@dngormash.ru</a>
+												</div>
+										</div>
 								<div class="part-right">
 									<p>ГП &laquo;Донецкгормаш&raquo; на постоянной основе проводит предквалификацию и отбор поставщиков по следующим группам товарно-материальных ценностей, услуг:</p>
 									<a href="" class="list-link-exel">Перечень закупаемых ТМЦ</a>
 									<p>ГП &laquo;Донецкгормаш&raquo; стремится к взаимовыгодному и надежному партнерству со своими поставщиками!</p>
 								</div>
-								<div class="contact-shipper">
-									<p>По вопросам сотрудничества:</p>
-									<div class="contact-tel-wrapper">
-										<a href="tel:+380710000000" class='tel'>
-										+380710000000</a>
-										<span class="whom">Отдел закупок</span>
-									</div>
-									<a href="mailto:snabg@dngormash.ru" class="email">snabg@dngormash.ru</a>
-								</div>
+							</div>
 						</div>
 				</section>
 			</section>
