--- a/gvardiya/change_guard.html
+++ b/gvardiya/change_guard.html
@@ -18,21 +18,7 @@
 <link rel="stylesheet" type="text/css" href="dist/css/main.css">
 </head>
 <body >
-<div class="top-block inner-top-block">
-	<div class="container">
-		<ul class="topnav inner-topnav" >
-				<li class="item1"><a href="index.html">Главная</a></li>
-				<li class="item2"><a href="index.html#ekonomiya" >Экономия</a></li>
-				<li class="item3"><a href="index.html#services">Услуги</a></li>
-				<li class="item4"><a href="index.html#garant">Гарантии</a></li>
-				<li class="item5"><a href="index.html#answer-quetion">Вопрос-ответ</a></li>
-				<li class="item6"><a href="index.html#advantages">Преимущества</a></li>
-				<li class="item6"><a href="index.html#how-it-work">Как мы работаем</a></li>
-				<li class="item6"><a href="index.html#sales">Акция</a></li>
-				<li class="item6"><a href="index.html#contactPage">Контакты</a></li>
-		</ul>
-	</div>
-</div>
+
 <div id="page">
 		<section class="section block-01" id="block-01f">
 		<div class="container">
@@ -50,14 +36,36 @@
 				</div>
 		<!-- <a href="#consultation" class="btn btn-popup">Получить консультацию</a> -->
 	</div>
+	<div class="top-block inner-top-block">
+		<div class="container">
+			<ul class="topnav inner-topnav" >
+					<li class="item1"><a href="index.html">Главная</a></li>
+					<li class="item2"><a href="index.html#ekonomiya" >Экономия</a></li>
+					<li class="item3"><a href="index.html#services">Услуги</a></li>
+					<!-- <li class="item4"><a href="index.html#garant">Гарантии</a></li> -->
+					<li class="item5"><a href="index.html#answer-quetion">Вопрос-ответ</a></li>
+					<li class="item6"><a href="index.html#advantages">Преимущества</a></li>
+					<li class="item6"><a href="index.html#how-it-work">Как мы работаем</a></li>
+					<li class="item6"><a href="index.html#sales">Акция</a></li>
+					<li class="item6"><a href="index.html#contactPage">Контакты</a></li>
+			</ul>
+		</div>
+	</div>
 	<div class="inner-block-title">
 			<a href="/">Главная ></a><span>Замена охранно-пожарной системы </span>
 			<br><br>
 			<h1>Замена охранно-пожарной системы</h1></div>
 		<div class="inner-content">
-		<p> Далеко-далеко за, словесными горами в стране гласных и согласных живут рыбные тексты. Живет назад языком заглавных! Себя раз парадигматическая проектах имени которой напоивший языком своих залетают переписывается речью о не переулка текстами, сбить дороге жизни реторический текст которое ему, ручеек, по всей ты. Себя продолжил до образ однажды использовало? Оксмокс напоивший он большого. </p>
-		<p> Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты. Языкового страну предложения одна своих коварных себя пунктуация напоивший? Над парадигматическая продолжил меня напоивший они это вопрос эта домах? Повстречался, оксмокс языкового? Повстречался приставка но его даже живет снова продолжил! </p>
-		<p> Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Пор дорогу языкового что переулка живет власти, продолжил ее знаках собрал проектах, возвращайся вскоре запятой они вершину несколько большого это текстов семантика залетают точках свою, букв буквоград. Последний, маленький ручеек.</p>
+			<p>Системы пожарных и охранно-пожарной сигнализации – это устройства, которые фиксируют нарушения и предупреждают об угрозах. Любая техника в какой-то период дает сбой, поэтому не пренебрегайте профессиональным обслуживанием охранных средств, если вы цените личную безопасность.<br><br>
+				<b>Обслуживание охранно-пожарного оборудования</b><br>
+				Внешний осмотр и анализ работоспособности устройств нужно проводить раз в месяц. Каждые пять лет специалисты проверяют технический потенциал и целесообразность комплекса. <br><br>
+				Во время планового обслуживания специалист проверят цельность гибких деталей проводки, исправность центрального пульта, сигнализационных компонентов и элементов питания. <br>
+				Некоторые случаи вынуждают внепланово вызвать мастера:<br>
+				- сигнализация срабатывает по ложной тревоге;<br>
+				- некоторые детали повреждены из-за погодных условий;<br>
+				- произошел сбой электронных элементов системы.<br>
+				<br>
+				Замена старого оборудования на новое не всегда происходит из-за поломки. Устаревают технологии передачи данных: например, старые модели подсоединялись к обычным телефонным сетям. Нужно расширить функционал оборудования или увеличить зону наблюдения. Наши специалисты заменят комплектующие систем на объектах любой сложности. </p><br>
 <div class="prefooter-inner">
 		<a href="index.html">Вернуться на главную</a>
 		<a href="#consultation" class="btn btn-popup">Получить консультацию</a></div>
@@ -70,7 +78,7 @@
 				<li class="item1"><a href="/">Главная</a></li>
 				<li class="item2"><a href="index.html#ekonomiya" >Экономия</a></li>
 				<li class="item3"><a href="index.html#services">Услуги</a></li>
-				<li class="item4"><a href="index.html#garant">Гарантии</a></li>
+				<!-- <li class="item4"><a href="index.html#garant">Гарантии</a></li> -->
 				<li class="item5"><a href="index.html#answer-quetion">Вопрос-ответ</a></li>
 				<li class="item6"><a href="index.html#advantages">Преимущества</a></li>
 				<li class="item6"><a href="index.html#how-it-work">Как мы работаем</a></li>
@@ -128,7 +136,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="jquery-3.3.1.min.html"><\/script>')</script>
 <script src="dist/js/jquery.fancybox/jquery.fancybox.pack.js"></script>
-<script type="text/javascript" src="dist/js/jquery.fullPage/jquery.fullPage.min.js"></script>
+<!-- <script type="text/javascript" src="dist/js/jquery.fullPage/jquery.fullPage.min.js"></script> -->
 <script type="text/javascript" src="dist/js/jQueryFormStyler/jquery.formstyler.min.js"></script>
 <script src="assets/js/inner-pages.js"></script>
 
