--- a/gvardiya/index.html
+++ b/gvardiya/index.html
@@ -199,7 +199,7 @@
                     <h2>Мы проектируем и монтируем</h2>
                 </div>
             </section>
-            <section class="section block-04">
+            <!-- <section class="section block-04">
                 <div class="container">
 
                     <div class="page-center">
@@ -246,7 +246,7 @@
                         </ul>
                     </div>
                 </div>
-            </section>
+            </section> -->
 							<section class="section block06a" id="section06a">
 								<div class="container">
 										<div class="center-block">
@@ -722,7 +722,7 @@
                     <div class="contact">
                         <div class="logo"></div>
                         <ul>
-                            <li class="item1">8 (499) 722-58-45</li>
+                            <li class="item1">8 (495) 722-58-45</li>
                             <li class="item2">(круглосуточно)</li>
                             <li class="item3">Адрес: г.Москва<br> 3-й Крутицкий переулок, д. 15</li>
                             <li class="item4">E-mail: info@oxrana.net</li>
@@ -796,11 +796,10 @@
 															.receipt .first td:nth-child(1){ width:200px;border:1px solid; }
 															td:nth-child(2) .conteiner-flex{ border-bottom:1px solid #949494;display:flex; }
 															td:nth-child(2) .conteiner-flex:nth-child(3),td:nth-child(2) .conteiner-flex:nth-child(5),td:nth-child(2) .conteiner-flex:nth-child(7),td:nth-child(2) .conteiner-flex:nth-child(9),td:nth-child(2) .conteiner-flex:nth-child(12){ border-bottom:0; }
-															.l13,.l53,.l43,.l61,.l71,.l81,.l91,.l121{ padding:0 5px; min-width:100px}
+															.l13,.l53,.l43,.l61,.l71,.l81,.l91,.l121{ padding:0 5px; min-width:110px}
 														.l121{height: 60px; }
 															/* .l11,.l41,.l51{ padding:0 5px; min-width:160px} */
 															.l11,.l41,.l51{ padding:0 5px; min-width:190px}
-
 															/* .l12,.l14,.l52,.l54,.l44{ min-width:160px;} */
 															.l12,.l14,.l52,.l54,.l44{ min-width:130px;}
 
@@ -823,7 +822,7 @@
 															.l31{width: 100%;border-bottom: 1px solid;}
 															.ll31{text-align: center;}
 															.receipt .first td:nth-child(2),td:nth-child(1){ vertical-align:top; }
-															.qrtrue,.qrfalse { width: 2px;height: 2px;display: inline-block;margin: 0; }
+															.qrtrue,.qrfalse { width: 3px;height: 3px;display: inline-block;margin: 0; }
 															.departments_print { font-size: 17px;}
 
 															.inline_edit:hover,.inline_edit:focus{ background:#B4EEBB!important;color:#000; }
@@ -848,6 +847,7 @@
 																<div class="ll1">Извещение</div>
 																<div class="ll2 qrcodeimg"><div class="qrcode">
 																	</div></div>
+																<div class="ll3">&nbsp;</div>
 																<div class="ll3">Кассир</div>
 															</div>
 														</td>
@@ -916,8 +916,8 @@
 																<div class="ll2"><div class="qrcode">
 
 																	</div></div>
-																<div class="ll3">Кассир</div>
 																<div class="ll3">&nbsp;</div>
+																<div class="ll3">Кассир</div>
 																<div class="ll3">&nbsp;</div>
 																<div class="ll3">&nbsp;</div>
 																<div class="ll31">Оплата  производится</div>
