--- a/gvardiya/push_guard.html
+++ b/gvardiya/push_guard.html
@@ -18,21 +18,7 @@
 <link rel="stylesheet" type="text/css" href="dist/css/main.css">
 </head>
 <body >
-<div class="top-block inner-top-block">
-	<div class="container">
-		<ul class="topnav inner-topnav" >
-				<li class="item1"><a href="index.html">Главная</a></li>
-				<li class="item2"><a href="index.html#ekonomiya" >Экономия</a></li>
-				<li class="item3"><a href="index.html#services">Услуги</a></li>
-				<li class="item4"><a href="index.html#garant">Гарантии</a></li>
-				<li class="item5"><a href="index.html#answer-quetion">Вопрос-ответ</a></li>
-				<li class="item6"><a href="index.html#advantages">Преимущества</a></li>
-				<li class="item6"><a href="index.html#how-it-work">Как мы работаем</a></li>
-				<li class="item6"><a href="index.html#sales">Акция</a></li>
-				<li class="item6"><a href="index.html#contactPage">Контакты</a></li>
-		</ul>
-	</div>
-</div>
+
 <div id="page">
 		<section class="section block-01" id="block-01f">
 		<div class="container">
@@ -50,14 +36,32 @@
 				</div>
 				<!-- <a href="#consultation" class="btn btn-popup">Получить консультацию</a> -->
 			</div>
+			<div class="top-block inner-top-block">
+				<div class="container">
+					<ul class="topnav inner-topnav" >
+							<li class="item1"><a href="index.html">Главная</a></li>
+							<li class="item2"><a href="index.html#ekonomiya" >Экономия</a></li>
+							<li class="item3"><a href="index.html#services">Услуги</a></li>
+							<!-- <li class="item4"><a href="index.html#garant">Гарантии</a></li> -->
+							<li class="item5"><a href="index.html#answer-quetion">Вопрос-ответ</a></li>
+							<li class="item6"><a href="index.html#advantages">Преимущества</a></li>
+							<li class="item6"><a href="index.html#how-it-work">Как мы работаем</a></li>
+							<li class="item6"><a href="index.html#sales">Акция</a></li>
+							<li class="item6"><a href="index.html#contactPage">Контакты</a></li>
+					</ul>
+				</div>
+			</div>
 			<div class="inner-block-title">
 					<a href="/">Главная ></a><span>Тревожная кнопка </span>
 					<br><br>
 					<h1>Тревожная кнопка</h1></div>
 				<div class="inner-content">
-				<p> Далеко-далеко за, словесными горами в стране гласных и согласных живут рыбные тексты. Живет назад языком заглавных! Себя раз парадигматическая проектах имени которой напоивший языком своих залетают переписывается речью о не переулка текстами, сбить дороге жизни реторический текст которое ему, ручеек, по всей ты. Себя продолжил до образ однажды использовало? Оксмокс напоивший он большого. </p>
-				<p> Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты. Языкового страну предложения одна своих коварных себя пунктуация напоивший? Над парадигматическая продолжил меня напоивший они это вопрос эта домах? Повстречался, оксмокс языкового? Повстречался приставка но его даже живет снова продолжил! </p>
-				<p> Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Пор дорогу языкового что переулка живет власти, продолжил ее знаках собрал проектах, возвращайся вскоре запятой они вершину несколько большого это текстов семантика залетают точках свою, букв буквоград. Последний, маленький ручеек.</p>
+					<p>Тревожная охранная кнопка – важный инструмент для обеспечения вашей безопасности. Это средство экстренного вызова, которое устанавливается в офисах, магазинах, банках, учебных учреждениях, в частных домах и квартирах. Это необходимый элемент качественной охранной системы, особенно в местах массового скопления людей и хранения ценного имущества.
+						Перед установкой сигнализационной системы специалисты вневедомственной охраны анализируют объект. Комплекс выбирается с учетом общей площади помещения, его планировки и расстановки мебели. <br><br>
+						<b>В чем особенность экстренного вызова</b><br>
+						Мы предлагаем два способа исполнения тревожной кнопки: статичный и мобильный. Статичный вариант устанавливается в местах, незаметных для глаз окружающих, но доступных для вас. Мобильный – выполнен в виде брелока. Вы можете носить его вместе с ключами и подавать сигнал с любой точки охраняемого объекта.
+						Мы рекомендуем установить тревожную кнопку в квартиру только в комплексе с остальными элементами системы безопасности. Датчики зафиксируют угрозу и сообщат о ней еще до того, как злоумышленники проникнут в дом, и вы сразу сможете подать сигнал тревоги в охранный пункт. <br><br>
+						Наряд вневедомственной охраны молниеносно реагирует на вызов, потому что патрули службы находятся во всех регионах города. Их экипажи снабжены спецсигналами, а сотрудники уполномочены задерживать преступников и применять к ним силу.</p><br>
 		<div class="prefooter-inner">
 				<a href="/">Вернуться на главную</a>
 				<a href="#consultation" class="btn btn-popup">Получить консультацию</a></div>
@@ -70,7 +74,7 @@
 						<li class="item1"><a href="/">Главная</a></li>
 						<li class="item2"><a href="index.html#ekonomiya" >Экономия</a></li>
 						<li class="item3"><a href="index.html#services">Услуги</a></li>
-						<li class="item4"><a href="index.html#garant">Гарантии</a></li>
+						<!-- <li class="item4"><a href="index.html#garant">Гарантии</a></li> -->
 						<li class="item5"><a href="index.html#answer-quetion">Вопрос-ответ</a></li>
 						<li class="item6"><a href="index.html#advantages">Преимущества</a></li>
 						<li class="item6"><a href="index.html#how-it-work">Как мы работаем</a></li>
@@ -128,7 +132,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 		<script>window.jQuery || document.write('<script src="jquery-3.3.1.min.html"><\/script>')</script>
 		<script src="dist/js/jquery.fancybox/jquery.fancybox.pack.js"></script>
-		<script type="text/javascript" src="dist/js/jquery.fullPage/jquery.fullPage.min.js"></script>
+		<!-- <script type="text/javascript" src="dist/js/jquery.fullPage/jquery.fullPage.min.js"></script> -->
 		<script type="text/javascript" src="dist/js/jQueryFormStyler/jquery.formstyler.min.js"></script>
 		<script src="assets/js/inner-pages.js"></script>
 
