--- a/dgm/contact/contactform.html
+++ b/dgm/contact/contactform.html
@@ -39,7 +39,7 @@
 	</header>
 <div class="header_container" id="contactform"></div>
 <section class="content_sidebar">
-	<header class="minor_header" id="minor_headerForm">
+	<header class="minor_header">
 			<h1 class="heading_header heading_h2">Связаться с нами</h1>
 	</header>
 
