--- a/gvardiya/flat_guard.html
+++ b/gvardiya/flat_guard.html
@@ -18,23 +18,10 @@
 <link rel="stylesheet" type="text/css" href="dist/css/main.css">
 </head>
 <body >
-<div class="top-block inner-top-block">
-	<div class="container">
-		<ul class="topnav inner-topnav" >
-				<li class="item1"><a href="/">Главная</a></li>
-				<li class="item2"><a href="index.html#ekonomiya" >Экономия</a></li>
-				<li class="item3"><a href="index.html#services">Услуги</a></li>
-				<li class="item4"><a href="index.html#garant">Гарантии</a></li>
-				<li class="item5"><a href="index.html#answer-quetion">Вопрос-ответ</a></li>
-				<li class="item6"><a href="index.html#advantages">Преимущества</a></li>
-				<li class="item6"><a href="index.html#how-it-work">Как мы работаем</a></li>
-				<li class="item6"><a href="index.html#sales">Акция</a></li>
-				<li class="item6"><a href="index.html#contactPage">Контакты</a></li>
-		</ul>
-	</div>
-</div>
+
 <div id="page">
 <section class="section block-01" id="block-01f">
+
 <div class="container">
 		<div class="logo ir inner-logo">Проектно монтажный центр вневедомственной охраны</div>
 		<div class="logo-text-inner">
@@ -50,14 +37,38 @@
 		</div>
 		<!-- <a href="#consultation" class="btn btn-popup">Получить консультацию</a> -->
 	</div>
+	<!-- ////////////////// -->
+	<div class="top-block inner-top-block">
+			<div class="container">
+				<ul class="topnav inner-topnav" >
+						<li class="item1"><a href="/">Главная</a></li>
+						<li class="item2"><a href="index.html#ekonomiya" >Экономия</a></li>
+						<li class="item3"><a href="index.html#services">Услуги</a></li>
+						<!-- <li class="item4"><a href="index.html#garant">Гарантии</a></li> -->
+						<li class="item5"><a href="index.html#answer-quetion">Вопрос-ответ</a></li>
+						<li class="item6"><a href="index.html#advantages">Преимущества</a></li>
+						<li class="item6"><a href="index.html#how-it-work">Как мы работаем</a></li>
+						<li class="item6"><a href="index.html#sales">Акция</a></li>
+						<li class="item6"><a href="index.html#contactPage">Контакты</a></li>
+				</ul>
+			</div>
+		</div>
+		<!-- ////////////////////////// -->
 	<div class="inner-block-title">
 			<a href="/">Главная ></a><span>Охрана квартир в Москве </span>
 			<br><br>
 			<h1>Охрана квартир в Москве</h1></div>
 		<div class="inner-content">
-		<p> Далеко-далеко за, словесными горами в стране гласных и согласных живут рыбные тексты. Живет назад языком заглавных! Себя раз парадигматическая проектах имени которой напоивший языком своих залетают переписывается речью о не переулка текстами, сбить дороге жизни реторический текст которое ему, ручеек, по всей ты. Себя продолжил до образ однажды использовало? Оксмокс напоивший он большого. </p>
-		<p> Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты. Языкового страну предложения одна своих коварных себя пунктуация напоивший? Над парадигматическая продолжил меня напоивший они это вопрос эта домах? Повстречался, оксмокс языкового? Повстречался приставка но его даже живет снова продолжил! </p>
-		<p> Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Пор дорогу языкового что переулка живет власти, продолжил ее знаках собрал проектах, возвращайся вскоре запятой они вершину несколько большого это текстов семантика залетают точках свою, букв буквоград. Последний, маленький ручеек.</p>
+			<p>Квартирные кражи – реальная угроза для жителей больших городов. Бронированные двери и решетки на окнах принесут преступникам неудобства, но не гарантируют абсолютную защиту. Обезопасьте свою семью, жилье и драгоценности – установите централизованную систему охраны. <br><br>
+				<b>Верный способ защитить свое жилье от злоумышленников</b>
+				<br>Мы предлагаем услуги по установке охранной сигнализации. Это комплекс, который состоит из:<br>
+				- приемно-контрольного прибора;<br>
+				- разноплановых датчиков, которые фиксируют нарушения;<br>
+				- извещателей объемного обнаружения.<br>
+				<br>
+				Подключайте пультовую систему охраны, чтобы зафиксировать даже самые нестандартные проникновения злоумышленников и быстро передать тревожный сигнал в охранный пункт.<br><br>
+				В нашем штате работают опытные инженеры, которые установят надежную систему сигнализации. Мы предоставим контакты лучших работников вневедомственных структур. Только у них есть полномочия задерживать преступников. Тарифы их услуг фиксируется законодательством: вы вносите недорогую ежемесячную плату, а получаете спокойный, безопасный сон.<br><br>
+				Патрули – во всех районах Москвы, поэтому они мгновенно реагируют на каждый сигнал. С новейшими технологиями оповещения об угрозах и профессионалами своего дела у квартирных воров нет шанса.</p><br>
 <div class="prefooter-inner">
 		<a href="/">Вернуться на главную</a>
 		<a href="#consultation" class="btn btn-popup">Получить консультацию</a></div>
@@ -70,7 +81,7 @@
 				<li class="item1"><a href="/">Главная</a></li>
 				<li class="item2"><a href="index.html#ekonomiya" >Экономия</a></li>
 				<li class="item3"><a href="index.html#services">Услуги</a></li>
-				<li class="item4"><a href="index.html#garant">Гарантии</a></li>
+				<!-- <li class="item4"><a href="index.html#garant">Гарантии</a></li> -->
 				<li class="item5"><a href="index.html#answer-quetion">Вопрос-ответ</a></li>
 				<li class="item6"><a href="index.html#advantages">Преимущества</a></li>
 				<li class="item6"><a href="index.html#how-it-work">Как мы работаем</a></li>
@@ -128,7 +139,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="jquery-3.3.1.min.html"><\/script>')</script>
 <script src="dist/js/jquery.fancybox/jquery.fancybox.pack.js"></script>
-<script type="text/javascript" src="dist/js/jquery.fullPage/jquery.fullPage.min.js"></script>
+<!-- <script type="text/javascript" src="dist/js/jquery.fullPage/jquery.fullPage.min.js"></script> -->
 <script type="text/javascript" src="dist/js/jQueryFormStyler/jquery.formstyler.min.js"></script>
 <script src="assets/js/inner-pages.js"></script>
 
