--- a/gvardiya/house_guard.html
+++ b/gvardiya/house_guard.html
@@ -18,21 +18,7 @@
 <link rel="stylesheet" type="text/css" href="dist/css/main.css">
 </head>
 <body >
-<div class="top-block inner-top-block">
-	<div class="container">
-		<ul class="topnav inner-topnav" >
-				<li class="item1"><a href="/">Главная</a></li>
-				<li class="item2"><a href="index.html#ekonomiya" >Экономия</a></li>
-				<li class="item3"><a href="index.html#services">Услуги</a></li>
-				<li class="item4"><a href="index.html#garant">Гарантии</a></li>
-				<li class="item5"><a href="index.html#answer-quetion">Вопрос-ответ</a></li>
-				<li class="item6"><a href="index.html#advantages">Преимущества</a></li>
-				<li class="item6"><a href="index.html#how-it-work">Как мы работаем</a></li>
-				<li class="item6"><a href="index.html#sales">Акция</a></li>
-				<li class="item6"><a href="index.html#contactPage">Контакты</a></li>
-		</ul>
-	</div>
-</div>
+
 <div id="page">
 <section class="section block-01" id="block-01h">
 <div class="container">
@@ -50,14 +36,33 @@
 		</div>
 		<!-- <a href="#consultation" class="btn btn-popup">Получить консультацию</a> -->
 	</div>
+	<div class="top-block inner-top-block">
+		<div class="container">
+			<ul class="topnav inner-topnav" >
+					<li class="item1"><a href="/">Главная</a></li>
+					<li class="item2"><a href="index.html#ekonomiya" >Экономия</a></li>
+					<li class="item3"><a href="index.html#services">Услуги</a></li>
+					<!-- <li class="item4"><a href="index.html#garant">Гарантии</a></li> -->
+					<li class="item5"><a href="index.html#answer-quetion">Вопрос-ответ</a></li>
+					<li class="item6"><a href="index.html#advantages">Преимущества</a></li>
+					<li class="item6"><a href="index.html#how-it-work">Как мы работаем</a></li>
+					<li class="item6"><a href="index.html#sales">Акция</a></li>
+					<li class="item6"><a href="index.html#contactPage">Контакты</a></li>
+			</ul>
+		</div>
+	</div>
 	<div class="inner-block-title">
 			<a href="/">Главная ></a><span>Охрана частного дома </span>
 			<br><br>
 			<h1>Охрана частного дома</h1></div>
 		<div class="inner-content">
-		<p> Далеко-далеко за, словесными горами в стране гласных и согласных живут рыбные тексты. Живет назад языком заглавных! Себя раз парадигматическая проектах имени которой напоивший языком своих залетают переписывается речью о не переулка текстами, сбить дороге жизни реторический текст которое ему, ручеек, по всей ты. Себя продолжил до образ однажды использовало? Оксмокс напоивший он большого. </p>
-		<p> Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты. Языкового страну предложения одна своих коварных себя пунктуация напоивший? Над парадигматическая продолжил меня напоивший они это вопрос эта домах? Повстречался, оксмокс языкового? Повстречался приставка но его даже живет снова продолжил! </p>
-		<p> Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Пор дорогу языкового что переулка живет власти, продолжил ее знаках собрал проектах, возвращайся вскоре запятой они вершину несколько большого это текстов семантика залетают точках свою, букв буквоград. Последний, маленький ручеек.</p>
+			<p>Охранная сигнализация частного дома – эффективный способ защитить жилье от вторжения преступников. Наши системы работают на базе новейших технологий и ведут круглосуточное наблюдение за объектом. <br><br>
+				<b>Как выбрать охранное оборудование</b><br>
+				Перед тем, как инженеры установят сигнализацию, специалисты вневедомственной охраны проведут анализ вашего дома. Это позволит выбрать самый действенный метод защиты, так как мы используем несколько схем монтажа, адаптированных под разные условия. <br><br>
+				Установите комплекс охранной сигнализации, которая включает в себя датчики на все проемы, извещатели объемного обнаружения. Они фиксируют любые способы проникновения в жилье: через двери или окна, путем разрушения стен, потолка и даже пола. <br><br>
+				Выбирая систему защиты для загородного дома, который находится вдали от полицейских участков, позаботьтесь об установке средства экстренного вызова. «Тревожная кнопка» вызовет наряд вневедомственной охраны, который прибудет в кратчайшие сроки. <br><br>
+				Предлагаем два варианта кнопки тревожной сигнализации: стационарный и мобильный – в виде брелока, с помощью которого вы сможете отправить сигнал, находясь в любой точке участка. <br><br>
+				Грабители могут нагрянуть когда-угодно, но с нашими системами вы и ваши близкие будут в безопасности. Датчики моментально зафиксируют нарушения, а прибывшие сотрудники вневедомственной службы задержат преступников на месте. </p><br>
 <div class="prefooter-inner">
 		<a href="/">Вернуться на главную</a>
 		<a href="#consultation" class="btn btn-popup">Получить консультацию</a></div>
@@ -70,7 +75,7 @@
 				<li class="item1"><a href="/">Главная</a></li>
 				<li class="item2"><a href="index.html#ekonomiya" >Экономия</a></li>
 				<li class="item3"><a href="index.html#services">Услуги</a></li>
-				<li class="item4"><a href="index.html#garant">Гарантии</a></li>
+				<!-- <li class="item4"><a href="index.html#garant">Гарантии</a></li> -->
 				<li class="item5"><a href="index.html#answer-quetion">Вопрос-ответ</a></li>
 				<li class="item6"><a href="index.html#advantages">Преимущества</a></li>
 				<li class="item6"><a href="index.html#how-it-work">Как мы работаем</a></li>
@@ -128,7 +133,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="jquery-3.3.1.min.html"><\/script>')</script>
 <script src="dist/js/jquery.fancybox/jquery.fancybox.pack.js"></script>
-<script type="text/javascript" src="dist/js/jquery.fullPage/jquery.fullPage.min.js"></script>
+<!-- <script type="text/javascript" src="dist/js/jquery.fullPage/jquery.fullPage.min.js"></script> -->
 <script type="text/javascript" src="dist/js/jQueryFormStyler/jquery.formstyler.min.js"></script>
 <script src="assets/js/inner-pages.js"></script>
 
